# birdclef-ml-framework

./: .gitignore  kaggle.ipynb  pyproject.toml
data/: split_soundscapes_labels.csv  test_split.csv  train_split.csv
src/args/: experiment_registry.py  yaml_config.py
src/datasets/: birdclef_dataset.py  birdclef_spectrogram_dataset.py  birdclef_utils.py  birdclef_waveform_dataset.py
src/experiments/: base_experiment.py  birdclef_experiment.py  perch_similarity.py
src/models/: basic_spectrogram_model.py  debug_model.py  perch_model.py
src/util/: stats.py  visualization.py
src/wild-west/: data_visualization.ipynb  mapping_perch_to_birdclef_taxonomy.ipynb  peak_selection_and_window_extraction.ipynb  perch_inference_test.ipynb  read_soundscape_samples.ipynb  read_train_audio_samples.ipynb  split.ipynb
