[project]
name = "ml"
version = "0.1.0"
description = "ML environment"
requires-python = "==3.12.2"
dependencies = [
    # --- core scientific stack (unpinned, let resolver decide) ---
    "matplotlib",
    "numpy",
    "torch",
    "torchaudio",
    "torchvision",
    "protobuf",
    "pydantic",
    "pydantic-core",
    "requests",
    "setuptools",
    "sympy",
    "typing-extensions",
    "wandb",
    "pyyaml",
    "pillow",
    "networkx",
    "packaging",
    "psutil",
    "six",
    "click",
    "gitpython",
    "jinja2",
    "tornado",
    "urllib3",
    "certifi",
    "charset-normalizer",
    "idna",
    "filelock",
    "platformdirs",
    "sentry-sdk",

    # --- pip requirements (alphabetical, unpinned unless reason given) ---
    "Boruta",
    "Cartopy",
    "ImageHash",
    "Janome",
    "PyArabic",
    "PyUpSet",
    "Pympler",
    "Rtree",
    "shapely",
    "SimpleITK",
    "TPOT",
    "Wand",
    "bayesian-optimization",
    "boto3",
    "catboost",
    "category-encoders",
    "cesium",
    "comm",
    "cytoolz",
    # Older versions fail with LocalFileSystem error
    # https://stackoverflow.com/questions/77433096
    "datasets>=2.14.6",
    "deap",
    "dipy",
    "docker",
    "easyocr",
    "emoji",
    "fasttext",
    "featuretools",
    "fiona",
    "flax",
    "fury",
    "fuzzywuzzy",
    "geojson",
    "gensim",
    # b/443054743,b/455550872
    "google-adk[a2a,eval]>=1.21.0",
    "google-cloud-aiplatform",
    "google-cloud-videointelligence",
    "google-cloud-vision",
    "google-genai",
    "gpxpy",
    "h2o",
    "haversine",
    "hep-ml",
    "igraph",
    "ipympl",
    # Pinned: specific version required by downstream tooling
    "ipywidgets==8.1.5",
    "isoweek",
    "jedi",
    # Pinned: 0.11.1 breaks simulation image
    "jiter==0.10.0",
    # Pinned: later versions break Jupyter LSP (b/276358430)
    "jupyter-lsp==1.5.1",
    # Pinned: later versions break LSP (b/333854354)
    "jupyter_server==2.12.5",
    "jupyter_server_proxy",
    "jupyterlab",
    "jupyterlab-lsp",
    "kaggle>=1.8.3",
    "kaggle-environments",
    "kagglehub[pandas-datasets,hf-datasets,signing]>=0.4.2",
    # betterproto is a kagglehub[signing] dep that is still in beta; must be explicit
    "betterproto>=2.0.0b6",
    "keras-cv",
    "keras-nlp",
    "keras-tuner",
    "kornia",
    "langid",
    "libpysal",
    "lime",
    "line_profiler",
    "mamba",
    "mlcrate",
    "mne",
    "mpld3",
    # Pinned: learntools requires this specific version (b/274619697)
    "nbconvert==6.4.5",
    "nbdev",
    "nilearn",
    "olefile",
    "onnx",
    "openslide-bin",
    "openslide-python",
    "optuna",
    "pandas-profiling",
    "pandasql",
    "papermill",
    "path",
    "pdf2image",
    "plotly-express",
    "pudb",
    "pyLDAvis",
    "pycryptodome",
    "pydicom",
    "pyemd",
    "pyexcel-ods",
    "pymongo",
    "pypdf",
    "pytesseract",
    "python-lsp-server",
    "pytorch-ignite",
    "pytorch-lightning",
    "qgrid",
    "qtconsole",
    "ray",
    "rgf-python",
    "s3fs",
    "scikit-learn",
    # Scikit-learn accelerated library for x86
    "scikit-learn-intelex>=2023.0.1",
    "scikit-multilearn",
    "scikit-optimize",
    "scikit-plot",
    "scikit-surprise",
    "squarify",
    "tensorflow-io",
    # Pinned: must match torch 2.x ABI
    # https://github.com/meta-pytorch/torchcodec?tab=readme-ov-file#installing-torchcodec
    "torchcodec==0.10.0",
    "torchinfo",
    "torchmetrics",
    "torchtune",
    "transformers>=5.0.0",
    "vtk",
    "wavio",
    "xvfbwrapper",
    "ydata-profiling",
    "librosa",
    "pandas",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"
package = false

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }